about.css
* {
    padding: 0;
    border: 0;
    margin: 0;
    text-decoration: none;
}

html {
    background-color: #f6f8f7;
}
body {
    padding: 5px;
    width: 95%;
    margin: 100px auto;
}
.text {
    font-family: 'Roboto Slab', serif;
    font-size: 24px;
}



#header {
    float: left;
    margin-bottom: 20px;
    width: 25%;
    text-align: right;
/*    position: fixed;*/
}
/*
a {
    color: inherit;
}
*/
.img-circle {
    border-radius: 50%;
    max-width: 60%;
    box-shadow: 0 0 5px 1px #AAA;
    transition: all 0.2s ease-in-out;
}
.img-circle:hover {
    transform: scale(1.1);
    box-shadow: 0 0 10px 1px #AAA;
}
h1 {
    
    font-family: 'Cuprum', sans-serif;
    font-size: 30px;
    margin-top: 5px;
    margin-bottom: 5px;
    transition: all 0.2s ease-in-out;
}
h1:hover{
/*    font-size: 58px;*/
/*    transform: scale(1.2);*/
    color: #8f9fba;
}
#nav {
    margin-bottom: 5px;
}
#nav li, #social li {
    font-family: 'Cuprum', sans-serif;
    font-size: 24px;
    display: block;
}
#social li {
    display: inline;
    padding-left: 15px;
}



#content {
    width: 65%;
    margin-right: 50px;
    float: right;
}
h2 {
    margin-bottom: 30px;
}
#content p {
    margin-bottom: 40px;
}
footer {
    margin-top: 40px;
}

